<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/novedadesMenu"
            android:icon="?android:attr/actionModeWebSearchDrawable"
            android:title="@string/menuPrincipal" />
        <item
            android:id="@+id/menuMisJuegos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menuMisJuegos" />
        <item
            android:id="@+id/amigosMenu"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menuAmigos" />
    </group>

    <item
        android:id="@+id/logoutMenu"
        android:icon="@android:drawable/btn_dialog"
        android:title="@string/Logout" />

</menu>
