<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputLayoutNombreUser"
        android:layout_width="335dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/TextInputLayoutPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/EditTextNombreUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_string"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputLayoutPassword"
        android:layout_width="338dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="188dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutNombreUser">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/EditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_string"
            android:inputType="textPassword"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:onClick="actionLogin"
        android:text="@string/LoginButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="92dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="actionSignIn"
        android:text="@string/SignInButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonLogin"
        app:layout_constraintHorizontal_bias="0.299"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutPassword"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>